# bbb-minimal-buildroot-boot-image

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
buildroot/board/rheslar/bbb-minimal/: genimage.cfg  rheslar_bbb_minimal_defconfig
buildroot/board/rheslar/bbb-minimal/rootfs-overlay/etc/: inittab
docs/: bbb-buildroot-plan.md  cpp17-design-patterns-and-solid.md  deep-architecture.md  validation-plan.md
docs/design/: README.md  implementation-roadmap.md  interface-control.md  requirements.md  runtime-design.md  system-design.md  validation-plan.md
docs/design/diagrams/: system-design.drawio
docs/diagrams/: README.md  full-system-uml.drawio
include/bbb_boot/: BbbBootImage.hpp
src/: BbbBootImage.cpp  main.c  main.cpp
tests/: BbbBootImageTests.cpp  ProfileTests.cpp  test_repo_smoke.py
